--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,13 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.caching.debug=false
 
-mod.version=0.1.0
+mod.version=0.1.1
 mod.group=org.rhm
 mod.id=rose_gold
 mod.name=Rose Gold
 mod.description=Adds a new mineral, Rose Gold, to the game
-mod.author=Me!
-mod.license=CC0-1.0
+mod.author=Right Hand Man
+mod.license=MIT
 
 mod.mc_title=[VERSIONED]
 mod.mc_targets=[VERSIONED]
