--- a/versions/1.21.3/gradle.properties
+++ b/versions/1.21.3/gradle.properties
@@ -1,8 +1,7 @@
 mod.mc_title=1.21.3
-mod.mc_targets=1.21.2 1.21.3
+mod.mc_targets=1.21.2 1.21.3 1.21.4
 
 deps.forge_loader=53.0.14
 deps.neoforge_loader=21.3.28-beta
 
 deps.fabric_api=0.108.0+1.21.3
-deps.trimmed_api=4.0.1
